# labs

lab_1/: CMakeLists.txt  functions.c  functions.h  main.c  poly.c  poly.h
lab_1/Tests/: CMakeLists.txt  main.c  test.c
lab_2/: CMakeLists.txt  Complex.h  DynArray.h  LinkList.h  LinkedListSeq.h  Matrix.h  Sequence.h  main.cpp
lab_2/Sequence/: CMakeLists.txt  functions.cpp  functions.h  sequencetest.cpp
lab_2/Tests/: CMakeLists.txt  tests.cpp
lab_3/: ArraySeq.h  CMakeLists.txt  Complex.h  LinkList.h  LinkedListSeq.h  Person.h  Stack.h  b_tree.h  functions.cpp  functions.h  main.cpp
lab_3/Set/: CMakeLists.txt  Set.h  set_menu.cpp
lab_3/Tests/: CMakeLists.txt  tests.cpp
